# resources/views/components/admin/sidebar.blade.php
@@ -14,6 +14,8 @@
                         ['label' => 'Dashboard', 'route' => 'dashboard', 'icon' => 'layout-dashboard'],
                         ['label' => 'Users', 'route' => 'users.index', 'icon' => 'users'],
                         ['label' => 'Products', 'route' => 'products.index', 'icon' => 'package'],
+                        ['label' => 'Status Types', 'route' => 'status-types.index', 'icon' => 'layers'],
+                        ['label' => 'Statuses', 'route' => 'statuses.index', 'icon' => 'flag'],
                     ];
                 @endphp
 
